--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Shopping Cart</title>
    <!--font awesome-->
-
    <script src="https://kit.fontawesome.com/8255db11c9.js"></script>
+
+  
    <!--custom css-->
    <link rel="stylesheet" href="styles.css">
 </head>
@@ -32,6 +33,18 @@
 
 
  <!--end of navbar-->
+
+ <header class="hero">
+     <div class="banner">
+         <h1 class="banner-title">Furniture collection</h1>
+         <button class="banner-btn">shop now</button>
+
+     </div>
+ </header>
+ <!--hero-->
+
+
+ <!--end of hero-->
     <script src="app.js"></script>
 </body>
 </html>
