--- a/index.html
+++ b/index.html
@@ -45,6 +45,68 @@
 
 
  <!--end of hero-->
-    <script src="app.js"></script>
+
+ <!--products-->
+
+ <section class="products">
+<div class="section-title">
+    <h2>Our Products</h2>
+</div>
+<div class="products-center">
+    <article class="product">
+        <div class="img-container">
+            <img src="./images/product-1.jpeg" alt="product" class="product-img">
+            <button class="bag-btn" data-id="1">
+                <i class="fas fa-shopping-cart"></i>
+                add a bag
+            </button>
+        </div>
+        <h3>queen bag</h3>
+        <h4>125$</h4>
+        </article>
+    </article>
+</div>
+ </section>
+ 
+ <!--end of products-->
+ <!--cart-->
+
+ <div class="cart-overlay">
+     <div class="cart">
+         <span class="close-cart">
+             <i class="fas fa-window-close"></i>
+         </span>
+         <h2>your cart</h2>
+         <div class="cart-container">
+             <!--cart item-->
+             <div class="cart-item">
+                 <img src="./images/product-1.jpeg" alt="product">
+                 <div>
+                        <h4>queen bed</h4>
+                        <h5>$500</h5>
+                        <span class="remove-item">remove</span>
+                 </div>
+                 <div>
+                     <i class="fas fa-chevron-up"></i>
+                     <p class="item-amount">1</p>
+                     <i class="fas fa-chevron-down"></i>
+                 </div>
+             </div>
+             <div class="cart-footer">
+                 <h3>your total : $ <span class="cart-total">0
+
+                 </span></h3>
+                 <button class="clear-cart banner-btn">clear cart</button>
+             </div>
+             
+
+
+             <!--end cart item-->
+         </div>
+     </div>
+ </div>
+
+ <!--end of cart-->
+ <script src="app.js"></script>
 </body>
 </html>
